upgrade to java 21 and latest versions of arrow and commons lang3